--- a/_config.yml
+++ b/_config.yml
@@ -97,10 +97,10 @@ social:
 
 # Analytics
 analytics:
-  provider               : false # false (default), "google", "google-universal", "google-gtag", "custom"
+  provider               : "google-gtag"
   google:
-    tracking_id          :
-    anonymize_ip         : # true, false (default)
+    tracking_id          : "G-S3HVB75N7H"
+    anonymize_ip         : true
 
 
 # Site Author
