--- a/_config.yml
+++ b/_config.yml
@@ -74,7 +74,7 @@ google:
   search_engine_id       : # YOUR_SEARCH_ENGINE_ID
   instant_search         : # false (default), true
 # SEO Related
-google_site_verification :
+google_site_verification : 5qmVAoKbvLFrdg67H4uC3o7zWXM4UQKYdJnWrye8KFc
 bing_site_verification   :
 naver_site_verification  :
 yandex_site_verification :
