Add systemd article and cool-links section

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,5 +1,7 @@
 # main links
 main:
+  - title: "Cool Links"
+    url: /cool_links/
   - title: "About"
     url: /about/
   # - title: "Sample Posts"
