Test Site Og Image

--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,7 @@ facebook:
   username               :
   app_id                 :
   publisher              :
-og_image                 : /assets/images/site-image.png
+og_image                 : /assets/images/site-og-image.jpg
 # For specifying social profiles
 # - https://developers.google.com/structured-data/customize/social-profiles
 social:
