--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ baidu_site_verification  :
 
 # Social Sharing
 twitter:
-  username               :
+  username               : vlad_siv
 facebook:
   username               :
   app_id                 :
