--- a/_config.yml
+++ b/_config.yml
@@ -33,9 +33,9 @@ masthead_title           : " " # overrides the website title displayed in the ma
 # breadcrumbs            : false # true, false (default)
 words_per_minute         : 200
 comments:
-  provider               : # false (default), "disqus", "discourse", "facebook", "staticman", "staticman_v2", "utterances", "giscus", "custom"
+  provider               : 'disquis'
   disqus:
-    shortname            : # https://help.disqus.com/customer/portal/articles/466208-what-s-a-shortname-
+    shortname            : 'vladsiv'
   discourse:
     server               : # https://meta.discourse.org/t/embedding-discourse-comments-via-javascript/31963 , e.g.: meta.discourse.org
   facebook:
@@ -314,6 +314,6 @@ defaults:
       # classes: wide
       author_profile: false
       read_time: true
-      comments: false
+      comments: true
       share: false
       related: false
