Publications page and FARM-JWT post

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,6 +4,8 @@ main:
     url: /
   - title: "Cool Links"
     url: /cool-links/
+  - title: "Publications"
+    url: /publications/
   - title: "Archive"
     url: /archive/
   - title: "About"
