--- a/_config.yml
+++ b/_config.yml
@@ -107,7 +107,7 @@ analytics:
 author:
   name             : "Vladsiv"
   avatar           : "/assets/images/avatar.jpg"
-  bio              : "Theoretical physicist & biophysicist interested in programming, data science/engineering, and cloud technologies."
+  bio              : "Theoretical physicist & biophysicist interested in programming, data science/engineering, and cloud technologies - currently working as a Data Engineer."
   location         : "Novi Sad, Serbia"
   email            : "vladsiv@protonmail.com"
   links:
