Add cloudwatch alerts post

--- a/_config.yml
+++ b/_config.yml
@@ -108,7 +108,7 @@ author:
   name             : "Vladsiv"
   avatar           : "/assets/images/avatar.jpg"
   bio              : "Theoretical physicist & biophysicist interested in programming, data science/engineering, and cloud technologies - currently working as a Data Engineer."
-  location         : "Novi Sad, Serbia"
+  location         : "Belgrade, Serbia"
   email            : "vladsiv@protonmail.com"
   links:
     - label: "Twitter"
