Add Code Block Clipboard Copy

--- a/_config.yml
+++ b/_config.yml
@@ -311,3 +311,6 @@ defaults:
       comments: true
       share: false
       related: false
+
+after_footer_scripts:
+  - assets/js/clipboardcopy.js
