Add Certification Exam Resources Post

--- a/_config.yml
+++ b/_config.yml
@@ -107,7 +107,7 @@ analytics:
 author:
   name             : "Vladsiv"
   avatar           : "/assets/images/avatar.jpg"
-  bio              : "Theoretical physicist & biophysicist interested in programming, data science/engineering, and cloud technologies - currently working as a Sr. Scale Solutions Engineer @ Databricks."
+  bio              : "Theoretical physicist & biophysicist interested in programming, data science/engineering, and cloud technologies - currently working as a Sr. Scale Solution Engineer @ Databricks."
   location         : "Belgrade, Serbia"
   email            :
   links:
